--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "expo-sqlite": "~16.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
